# metaflora-incubus

./: .bootstrap  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: gguf-v1-cases.jsonl  head-to-head-v1-baselines.json  head-to-head-v1-launch-plan.md
examples/: calibration.jsonl
installer/: build_runtime_bundle.sh  cli.go  cli_e2e_test.go  default_config.go  download_timeout_test.go  go.mod  installer.go  installer_test.go  operations.go  production_cli_test.go  runtime_bundle_test.go  service_manager.go  service_manager_test.go
notebooks/: metaflora-incubus-bonsai-advisory.ipynb  metaflora-incubus-free-gpu.ipynb  metaflora-incubus-head-to-head.ipynb  metaflora-incubus-kaggle-recover-export.ipynb  metaflora-incubus-recover-cpu.ipynb  metaflora-incubus-recover-gguf.ipynb
requirements/: cloud.in  h2h.in  recovery.in
scripts/: augment_teacher_dataset.py  build_benchmark_evidence.py  build_hard_case_patch.py  build_hf_release_bundle.py  export_candidate.py  kaggle_recover_export.py  merge_adapter_for_export.py  prepare_dataset.py  publish_private_dataset.py  recover_free_gpu.py  rotate_cloud_bootstrap.py  run_free_gpu.py  run_gguf_benchmark.py  run_head_to_head_benchmark.py  train_candidate.py
tests/: test_adapters.py  test_benchmark_evidence_builder.py  test_benchmark_provenance.py  test_bonsai_advisory_notebook.py  test_cli.py  test_cloud_failure_reporting.py  test_cloud_quantization_profile.py  test_cloud_recovery.py  test_cloud_text_preflight.py  test_compact_build_contract.py  test_cpu_recovery_runner.py  test_evaluation.py  test_free_gpu_cloud.py  (+33 more)
(+59 files in other folders)
